# cpp-random-questions

./: .gitignore  CMakeLists.txt  README.md  main.cpp  odb.sh  setup.sh
db/: mysql.cpp  mysql.h
models/: person.cpp  person.hpp  questions.hpp  questions_db.hpp  student.hpp
src/: handler.h  main.cpp
